hphp/test/slow/clsmeth/elem-unset.php.expectf
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
varray(2) {
  string(3) "Foo"
  string(3) "bar"
}

Fatal error: Cannot unset string offsets in %s/elem-unset.php on line 53
